--- a/spot/parking/templates/parking_slot_list.html
+++ b/spot/parking/templates/parking_slot_list.html
@@ -1,28 +1,15 @@
-<h1>Parking Slots</h1>
+{% extends 'base.html' %}
 
-<table border="1">
-    <thead>
-        <tr>
-            <th>Slot Number</th>
-            <th>Status</th>
-            <th>Vehicle Number</th>
-            <th>View</th>
-            <th>Edit</th>
-            <th>Delete</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for slot in object_list %}
-        <tr>
-            <td>{{ slot.slot_number }}</td>
-            <td>{{ "Occupied" if slot.is_occupied else "Available" }}</td>
-            <td>{{ slot.vehicle_number|default:"N/A" }}</td>
-            <td><a href="{% url 'parking_view' slot.id %}">View</a></td>
-            <td><a href="{% url 'parking_edit' slot.id %}">Edit</a></td>
-            <td><a href="{% url 'parking_delete' slot.id %}">Delete</a></td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+{% block content %}
+<h2>{% if form.instance.pk %}Edit{% else %}Create{% endif %} Parking Slot</h2>
 
-<a href="{% url 'parking_new' %}">Add New Slot</a>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">{% if form.instance.pk %}Save{% else %}Create{% endif %}</button>
+</form>
+
+{% if form.instance.pk %}
+<a href="{% url 'parking_slot_list' %}">Back to list</a>
+{% endif %}
+{% endblock %}
