--- a/spot/parking/templates/parking_slot_form.html
+++ b/spot/parking/templates/parking_slot_form.html
@@ -1,9 +1,15 @@
-<h1>{% if object %}Edit{% else %}Add{% endif %} Parking Slot</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+<h2>{% if form.instance.pk %}Edit{% else %}Create{% endif %} Parking Slot</h2>
 
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Submit" />
+    <button type="submit">{% if form.instance.pk %}Save{% else %}Create{% endif %}</button>
 </form>
 
-<a href="{% url 'parking_list' %}">Cancel</a>
+{% if form.instance.pk %}
+<a href="{% url 'parking_slot_list' %}">Back to list</a>
+{% endif %}
+{% endblock %}
