--- a/spot/parking/templates/user_list.html
+++ b/spot/parking/templates/user_list.html
@@ -1,28 +1,15 @@
-<h1>Users List</h1>
+{% extends 'base.html' %}
 
-<table>
-    <tr>
-        <th>Username</th>
-        <th>Full Name</th>
-        <th>Mobile Number</th>
-        <th>Email</th>
-        <th>Role</th>
-        <th>Actions</th>
-    </tr>
-    {% for user in object_list %}
-    <tr>
-        <td>{{ user.username }}</td>
-        <td>{{ user.full_name }}</td>
-        <td>{{ user.mobile_number }}</td>
-        <td>{{ user.email }}</td>
-        <td>{{ user.role }}</td>
-        <td>
-            <a href="{% url 'user_view' user.pk %}">View</a>
-            <a href="{% url 'user_edit' user.pk %}">Edit</a>
-            <a href="{% url 'user_delete' user.pk %}">Delete</a>
-        </td>
-    </tr>
-    {% endfor %}
-</table>
+{% block content %}
+<h2>{% if form.instance.pk %}Edit{% else %}Create{% endif %} Parking Slot</h2>
 
-<a href="{% url 'user_new' %}">Add New User</a>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">{% if form.instance.pk %}Save{% else %}Create{% endif %}</button>
+</form>
+
+{% if form.instance.pk %}
+<a href="{% url 'parking_slot_list' %}">Back to list</a>
+{% endif %}
+{% endblock %}
