--- a/spot/parking/templates/user_list.html
+++ b/spot/parking/templates/user_list.html
@@ -1,15 +1,22 @@
-{% extends 'base.html' %}
-
-{% block content %}
-<h2>{% if form.instance.pk %}Edit{% else %}Create{% endif %} Parking Slot</h2>
-
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">{% if form.instance.pk %}Save{% else %}Create{% endif %}</button>
-</form>
-
-{% if form.instance.pk %}
-<a href="{% url 'parking_slot_list' %}">Back to list</a>
-{% endif %}
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>User List</title>
+</head>
+<body>
+    <h1>Users</h1>
+    <a href="{% url 'user_new' %}">Create New User</a>
+    <ul>
+        {% for user in users %}
+            <li>
+                <a href="{% url 'user_view' user.pk %}">{{ user.name }}</a> 
+                - <a href="{% url 'user_edit' user.pk %}">Edit</a>
+                - <a href="{% url 'user_delete' user.pk %}">Delete</a>
+            </li>
+        {% endfor %}
+    </ul>
+    <a href="{% url 'homepage' %}">Back to Homepage</a>
+</body>
+</html>
