--- a/spot/parking/templates/base.html
+++ b/spot/parking/templates/base.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parking App</title>
+    <title>SPOT - {% block title %}Smart Parking Organisation Tool{% endblock %}</title>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.12.0/cdn.min.js" defer></script>
 </head>
-<body>
-    <header>
-        <h1>Parking App</h1>
-        <nav>
-            <ul>
-                <li><a href="{% url 'user_create' %}">Create User</a></li>
-                <li><a href="{% url 'user_list' %}">User List</a></li>
-            </ul>
-        </nav>
-    </header>
+<body class="bg-gray-100 flex">
+    
+    {% include 'sidebar.html' %}
 
-    <main>
-        {% block content %}
-        {% endblock %}
+    <!-- Main Content -->
+    <main class="flex-1 p-6 ml-64">
+        <h1 class="text-2xl font-bold text-gray-800">SPOT Dashboard</h1>
+        {% block content %}{% endblock %}
     </main>
+
 </body>
 </html>
